package com.example.oulearning.organization.application.employee;

public interface UpdateEmployeeUseCase {
    void execute(UpdateEmployeeCommand command);
}
