package com.example.oulearning.organization.application.employee.port.in.command;

public record CreateEmployeeCommand(String name, String surname, String email) {
}
